# BibliaNVA

./: .env.exemple  .gitignore  README.md  config.py  create_favorites.sql  db.py  delete.sql  main.py  models.py  pyproject.toml  requirements.txt  schemas.py  upd_senhor.sql  utils.py
sources/: books.sql  convert.py  database.py  getgit.sh  replace.sql
static/: about.html  bible.html  books.html  index.html  license.html  livros.html  sobre.html
static/css/: styles.css
static/js/: functions.js  manifest.json
