[project]
name = "BibliaNVA"
version = "1.0.3"
description = "API e frontend para a Bíblia NVA"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "libsql-experimental>=0.0.53",
    "sqlalchemy>=2.0.0",
    "greenlet>=3.0.3",
    "uvicorn>=0.40.0",
    "libsql-client>=0.3.1",
    "sqlalchemy-libsql>=0.2.0",
]
